--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "backend": "node app.js"
   },
   "dependencies": {
+    "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
